feat: adds password change and withdrawal
